--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    
+    <meta property="og:title" content="Graphing Paper" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="wilbertom.github.io/graphingpaper" />
+    <meta property="og:image" content="preview.jpg" />
+    
     <title>Graphing Paper</title>
     <link href="gp.css" rel="stylesheet" />
   </head>
   <body>
-    <button id="clear-btn">Clear</button>
+    <button class="ui-btn ui-btn-clear" id="clear-btn">Clear</button>
+    <button class="ui-btn ui-btn-home"><a href="/">Home</a></button>
+
     <div id="container"></div>
     <script src="kinetic.min.js"></script>
     <script src="gp.js"></script>
