--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     
     <meta property="og:title" content="Graphing Paper" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="wilbertom.github.io/graphingpaper" />
-    <meta property="og:image" content="preview.jpg" />
+    <meta property="og:url" content="wilberto.org/graphingpaper" />
+    <meta property="og:image" content="wilberto.org/graphingpaper/preview.jpg" />
     
     <title>Graphing Paper</title>
     <link href="gp.css" rel="stylesheet" />
