--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Graphing Paper" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="wilberto.org/graphingpaper" />
