--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Graphing Paper" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="wilberto.org/graphingpaper" />
+    <meta property="og:url" content="http://wilberto.org/" />
     <meta property="og:image" content="wilberto.org/graphingpaper/preview.jpg" />
     
     <title>Graphing Paper</title>
