--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Graphing Paper" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://wilberto.org/" />
-    <meta property="og:image" content="wilberto.org/graphingpaper/preview.jpg" />
+    <meta property="og:image" content="http://wilberto.org/graphingpaper/preview.jpg" />
     
     <title>Graphing Paper</title>
     <link href="gp.css" rel="stylesheet" />
